S&R: Fix eternal loop on unexpected regular expression.

BUG: 358915
FIXED-IN: 15.12.2